user-application/k8s/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-application
spec:
  selector:
      matchLabels:
        app: user-application
  replicas: 1
  template:
    metadata:
      labels:
        app: user-application
    spec:
      containers:
        - name: user-application
          image: markoniemi/user-application:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /users/actuator/health/liveness
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 3                
          readinessProbe:
            httpGet:
              path: /users/actuator/health/readiness
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 3                
            failureThreshold: 2
          resources:
            requests:
              memory: 512M
