user-application/k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-application
spec:
  selector:
    app: user-application
  ports:
  - protocol: TCP
    port: 8083
  type: ClusterIP
